<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">KidsGame</string>

    <string name="one">CRO</string>
    <string name="two">CO</string>
    <string name="three">DI</string>
    <string name="four">LE</string>
    <string name="five">C</string>
    <string name="six">W</string>
    <string name="seven">O</string>
    <string name="eight">L</string>
    <string name="nine">DO</string>
    <string name="eleven">G</string>
    <string name="twelve">C</string>
    <string name="thirteen">T</string>
    <string name="fourteen">HO</string>
    <string name="fifteen">R</string>
    <string name="sixteen">SE</string>
    <string name="eighteen">HO</string>
    <string name="nineteen">ER</string>
    <string name="twenty">BU</string>
    <string name="twentyone">TT</string>
    <string name="twentytwo">ER</string>
    <string name="twentythree">FLY</string>
    <string name="twentyfour">SNA</string>
    <string name="twentyfive">KE</string>
    <string name="twentysix">ZE</string>
    <string name="twentyseven">RA</string>
    <string name="twentyeight">A</string>
    <string name="twentynine">N</string>
    <string name="thirtyone">T</string>
    <string name="thirtytwo">RAB</string>
    <string name="thirtythree">BIT</string>
    <string name="thirtyfour">FI</string>
    <string name="thirtyfive">SH</string>
    <string name="fourty">PEA</string>
    <string name="fourtyone">CO</string>
    <string name="fourtytwo">CK</string>
    <string name="fifty">O</string>
    <string name="fiftyone">W</string>
    <string name="fiftytwo">O</string>
    <string name="fiftythree">A</string>
    <string name="fortythree">PP</string>
    <string name="fortyfour">B</string>

    <string name="dots">...</string>

    <string name="great">GREAT JOB!</string>
    <string name="fail">TRY AGAIN!</string>

    <string name="clear">CLEAR</string>
    <string name="help">HELP</string>
    <string name="done">DONE</string>
    <string name="help_ru" translatable="false">ПОМОЩЬ</string>
    <string name="clear_ru" translatable="false">СБРОС</string>
    <string name="done_ru" translatable="false">ГОТОВО</string>

    <string-array name="animals">
        <item name="ant">ANT</item>
        <item name="butterfly">BUTTERFLY</item>
        <item name="cat">CAT</item>
        <item name="cow">COW</item>
        <item name="crocodile">CROCODILE</item>
        <item name="dog">DOG</item>
        <item name="fish">FISH</item>
        <item name="grasshopper">GRASSHOPPER</item>
        <item name="horse">HORSE</item>
        <item name="owl">OWL</item>
        <item name="peacock">PEACOCK</item>
        <item name="rabbit">RABBIT</item>
        <item name="snake">SNAKE</item>
        <item name="zebra">ZEBRA</item>

    </string-array>
    <string name="ant">ANT</string>
    <string name="butterfly">BUTTERFLY</string>
    <string name="cat">CAT</string>
    <string name="cow">COW</string>
    <string name="crocodile">CROCODILE</string>
    <string name="dog">DOG</string>
    <string name="fish">FISH</string>
    <string name="grasshopper">GRASSHOPPER</string>
    <string name="horse">HORSE</string>
    <string name="owl">OWL</string>
    <string name="peacock">PEACOCK</string>
    <string name="rabbit">RABBIT</string>
    <string name="snake">SNAKE</string>
    <string name="zebra">ZEBRA</string>
    <string name="settings_about">About</string>
    <string name="settings_help">Help</string>
    <string name="no_internet_connection">No Internet Connection</string>

    <string name="rus">Russian</string>
    <string name="eng">English</string>
    <string name="animals">Animals</string>
    <string name="transport">Transport</string>

</resources>
