<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/animals"
        android:icon="@drawable/ic_pets"
        app:showAsAction="ifRoom"
        android:title="@string/animals" />
    <item
        android:id="@+id/transport"
        android:icon="@drawable/ic_directions_car"
        app:showAsAction="ifRoom"
        android:title="@string/transport" />
    <item
        android:id="@+id/flag_ru"
        android:icon="@drawable/ic_russia_flag_16dp"
        android:title="@string/rus" />
    <item
        android:id="@+id/flag_us"
        android:icon="@drawable/ic_usamerica_flag_16dp"
        android:title="@string/eng" />
    <item android:id="@+id/menu_mute"
        android:icon="@drawable/ic_help_black_18dp"
        android:title="@string/settings_mute" />
    <item android:id="@+id/menu_unmute"
        android:icon="@drawable/ic_help_black_18dp"
        android:title="@string/settings_unmute" />
    <item android:id="@+id/menu_about"
        android:icon="@drawable/ic_help_black_18dp"
        android:title="@string/settings_about" />
</menu>