<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:icon="@mipmap/abc"
    android:orientation="vertical"
    tools:context="com.sergooo.kidsgame.MainActivity">

    <Button
        android:id="@+id/button1"
        android:tag="0"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="15dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/one"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:tag="3"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/four"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toTopOf="@+id/button3" />

    <Button
        android:id="@+id/button3"
        android:tag="2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/three"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

    <Button
        android:id="@+id/button2"
        android:tag="1"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/two"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toTopOf="@+id/button1" />

    <Button
        android:id="@+id/button5"
        android:tag="4"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/five"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/help"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button6"
        android:tag="5"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/six"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button7"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toTopOf="@+id/button5" />

    <Button
        android:id="@+id/button7"
        android:tag="6"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/seven"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/button8"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toTopOf="@+id/button6" />

    <Button
        android:id="@+id/button8"
        android:tag="7"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="syllablesClick"
        android:textColor="@color/eight"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toTopOf="@+id/button7"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/help"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="52dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="help"
        android:text="@string/help"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/clear"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/clear"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="clear"
        android:text="@string/clear"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/done"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/help"
        app:layout_constraintTop_toTopOf="@+id/help" />

    <Button
        android:id="@+id/done"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp"
        android:layout_weight="1"
        android:gravity="center"
        android:onClick="done"
        android:text="@string/done"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/clear"
        app:layout_constraintTop_toTopOf="@+id/clear" />

    <ImageView
        android:id="@+id/image_main"
        android:layout_width="370dp"
        android:layout_height="250dp"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <ProgressBar
        android:id="@+id/loading_indicator"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:layout_constraintBottom_toBottomOf="@+id/result"
        app:layout_constraintEnd_toEndOf="@+id/image_main"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/image_main"
        app:layout_constraintTop_toTopOf="@+id/image_main"
        app:layout_constraintVertical_bias="0.448" />

    <TextView
        android:id="@+id/result"
        android:layout_width="375dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:layout_weight="1"
        android:gravity="center"
        android:hint="@string/dots"
        android:textAlignment="center"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="205dp" />

</androidx.constraintlayout.widget.ConstraintLayout>